--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <body>
   <!-- Write your HTML here -->
   <div class="header">
-    <img src="../images/Design Agency.png" alt="Logo" class="imagen">
+    <img src="./images/Design Agency.png" alt="Logo" class="imagen">
     <div class="title">
       <h1>Mondrian Art Gallery</h1>
     </div>
